# shortpath

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/algorithms/: astar.py  bfs.py  dijkstra.py  factory.py
api/app/database/: redis.py
api/app/middleware/: validation.py
api/app/models/: graph.py  path.py
api/app/routers/: graphs.py  health.py  paths.py
api/app/services/: cleanup.py  metadata.py  storage.py  validation.py
api/app/utils/: logging.py
ui/: package-lock.json  package.json  tailwind.config.js
ui/public/: index.html
ui/src/: App.tsx  index.css
ui/src/components/: GraphBuilder.tsx  GraphVisualization.tsx  PathFinder.tsx
ui/src/services/: api.ts
ui/src/types/: graph.ts
