[tool.poetry]
name = "shortpath-api"
version = "0.1.0"
description = "REST API for calculating shortest paths in graphs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
redis = ">=5.0.0"
pydantic = ">=2.5.0"
python-multipart = ">=0.0.6"
python-dotenv = ">=1.0.0"
networkx = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
httpx = ">=0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

